--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "git-commit": "git add -A && git push && git commit -m '-' && git push",
     "npm-publish": "npm version patch && npm publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "goto-npm": "open https://www.npmjs.com/package/homebridge-homey-mqtt-mirror"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
